@@ -1,3 +1,6 @@
+Changes with melon 1.6.5                                          17 May 2017
+    *) Added script function about AES.
+
 Changes with melon 1.6.4                                          16 May 2017
     *) Updated Lang component.
     *) Added Set of file of melang.
